sumo/tests/duarouter/trips/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivallane' in definition of a vehicle is empty.
Error: Invalid arrivallane definition for vehicle ''
Quitting (on error).
